[package]
name = "at42qt1070"
version = "0.1.1"
authors = ["Sven Friedrich <friedrich122112@googlemail.com>"]
edition = "2018"
description = "Embedded-hal implementation for the AT42QT1070"
repository = "https://github.com/Steav005/at42qt1070"
license-file = "LICENSE"
categories = ["embedded", "no-std"]
keywords = ["i2c", "atmel"]
readme = "README.md"
exclude = [
    ".cargo/config",
    "examples/*",
    "memory.x",
    "watch.ps1",
]

[dependencies]
embedded-hal = "0.2.4"

[dev-dependencies]
stm32f4xx-hal = { version = "0.8.3", features = ["rt", "stm32f401"]}
embedded-hal = "0.2.4"
cortex-m = "0.6.2"
cortex-m-rt = { version = "0.6.12", features = ["device"] }
cortex-m-rtic = "0.5.3"
panic-semihosting = "0.5.3"
cortex-m-semihosting = "0.3.5"

[[example]]
name = "stm32f401cc"
path = "examples/stm32f401cc.rs"